--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.17"
+    "@openauthjs/openauth": "^0.3.6",
+    "hono": "^4.6.17",
+    "valibot": "1.0.0-beta.12"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
