--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,14 @@
 name = "hono-sandbox"
 main = "src/index.ts"
 compatibility_date = "2025-01-21"
-
-# compatibility_flags = [ "nodejs_compat" ]
+compatibility_flags = [ "nodejs_compat" ]
 
 # [vars]
 # MY_VAR = "my-variable"
 
 # [[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+binding = "CloudflareAuthKV"
+id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
 # [[r2_buckets]]
 # binding = "MY_BUCKET"
@@ -24,5 +23,5 @@ compatibility_date = "2025-01-21"
 # binding = "AI"
 
 # [observability]
-# enabled = true
+enabled = true
 # head_sampling_rate = 1
