--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_flags = [ "nodejs_compat" ]
 # [vars]
 # MY_VAR = "my-variable"
 
-# [[kv_namespaces]]
+[[kv_namespaces]]
 binding = "CloudflareAuthKV"
 id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
