--- a/wrangler.toml
+++ b/wrangler.toml
@@ -22,6 +22,6 @@ id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 # [ai]
 # binding = "AI"
 
-# [observability]
+[observability]
 enabled = true
 # head_sampling_rate = 1
